--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   --primary-color: #333;
   --secondary-color: #ffff;
   --menu-color: #333;
-
 }
 
 * {
@@ -13,7 +12,7 @@
 }
 
 body {
-  font-family: 'Cantamaran', sans-serif;
+  font-family: "Cantamaran", sans-serif;
   line-height: 1.6;
   color: #333;
   font-size: 1.1rem;
@@ -34,11 +33,9 @@ a {
   text-decoration: none;
 }
 
-
 ul {
   list-style: none;
 }
-
 
 .container {
   max-width: 1100px;
@@ -47,7 +44,6 @@ ul {
   overflow: hidden;
   padding: 0 2rem;
 }
-
 
 .navbar {
   /*font-size: 1.2rem;
@@ -58,7 +54,6 @@ ul {
   top: 0;
   width: 100%;
 }
-
 
 .navbar .container {
   display: grid;
@@ -77,6 +72,11 @@ ul {
   color: #333;
 }
 
+.navbar .nav a.active {
+  background-color: #ff9f1c;
+  color: white;
+}
+
 .navbar .nav a:hover {
   color: #ff9f1c;
 }
@@ -85,14 +85,13 @@ ul {
 .Home {
   margin: 2rem 0;
   position: center;
-  background: #011627
+  background: #011627;
 }
 
 .Home .container {
   height: 700px;
   background-size: cover;
   z-index: -2;
-
 }
 
 .Home .Home-inner {
@@ -107,9 +106,6 @@ ul {
   max-width: 1100px;
   padding: 5rem 0;
   z-index: 1;
-
-
-
 }
 
 .Home .Home-inner h1 {
@@ -128,7 +124,6 @@ ul {
 
 .Home .icons {
   margin-top: 0.4rem;
-
 }
 
 .Home .icons a {
@@ -144,7 +139,6 @@ ul {
 }
 
 /*Styling About section*/
-
 
 .About {
   margin: 2rem 0;
@@ -186,9 +180,18 @@ ul {
 }
 
 #myBtn {
-  background: var(--secondary-color);
-  font-size: 1rem;
-  border-radius: 20%;
+  display: inline-block;
+  background: var(--primary-color);
+  color: #fff;
+  padding: 0.8rem 1.5rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  border-radius: 30px;
+}
+
+#myBtn:hover {
+  background: #ff9f1c;
 }
 
 #more {
@@ -210,9 +213,8 @@ ul {
   background: #f2f2f2;
 }
 
-
 .skill-card:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 /*Scroll To Top 
@@ -274,13 +276,11 @@ ul {
   display: grid;
   grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
-
 }
 
 .Work h1 {
   font-size: 3rem;
   color: var(--secondary-color);
-
 }
 
 .Work h2 {
@@ -292,7 +292,7 @@ ul {
   display: flex;
   background: transparent;
   color: var(--secondary-color);
-  border: #ff9f1c .1px solid;
+  border: #ff9f1c 0.1px solid;
 }
 
 .Work a:hover {
@@ -310,15 +310,12 @@ ul {
   opacity: 0.3;
   border-color: #ff9f1c;
   transition: 0.5s ease-in-out;
-
 }
 
 /*Contact*/
 .Contact h1 {
   font-size: 3rem;
   color: white;
-  ;
-
 }
 
 .Contact h2 {
@@ -345,7 +342,6 @@ ul {
   transition: color 0.5s ease-in-out;
   transition: 0.5s ease-out;
   background: #011627;
-
 }
 
 .boxes div:hover {
@@ -370,4 +366,73 @@ ul {
   color: white;
   height: 60px;
   margin-top: -50px;
+}
+
+/*Media Queries*/
+.navbar .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .About .container div:first-child {
+    order: 2;
+  }
+
+  .About .container div:nth-child() {
+    order: -1;
+  }
+
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+
+  .About img {
+    width: 80%;
+    margin: auto;
+  }
+
+  .About h1 {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .navbar.responsive {
+    position: relative;
+  }
+
+  .navbar.navbar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .About .container div:first-child {
+    order: 2;
+  }
+
+  .About .container div:nth-child() {
+    order: -1;
+  }
+
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+
+  .About img {
+    width: 80%;
+    margin: auto;
+  }
+
+  .About h1 {
+    font-size: 3rem;
+  }
 }
