--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@
   --primary-color: #333;
   --secondary-color: #ffff;
   --menu-color: #333;
+  --background-color: #011627;
+  --span-color: #ff9f1c;
 }
+
+
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -46,11 +54,8 @@ ul {
 }
 
 .navbar {
-  /*font-size: 1.2rem;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;*/
   position: fixed;
-  background-color: #f2f2f2;
+  background-color: white;
   top: 0;
   width: 100%;
 }
@@ -99,10 +104,7 @@ ul {
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: auto;
+  margin-top: 8rem;
   max-width: 1100px;
   padding: 5rem 0;
   z-index: 1;
@@ -187,7 +189,7 @@ ul {
   border: none;
   cursor: pointer;
   font-size: 1.1rem;
-  border-radius: 30px;
+
 }
 
 #myBtn:hover {
@@ -198,84 +200,52 @@ ul {
   display: none;
 }
 
-/*scroll card*/
+/*skill card*/
+
 .skill {
+  background-color: #f2f2f2;
   display: flex;
   flex-direction: row;
   padding: 3rem;
   text-align: center;
   flex-flow: row wrap;
-  justify-content: space-evenly;
-  margin: 2rem;
+  justify-content: center;
+}
+
+.skill h1 {
+  font-size: 3rem;
+  color: var(--primary-color);
 }
 
 .skill-card {
-  background: #f2f2f2;
+  background: #011627;
+  color: #f2f2f2;
+  margin: 2rem;
+  border-radius: 10px;
+  margin-bottom: 2rem;
+}
+
+.skill-card .skill-card_body {
+  margin: 2rem;
 }
 
 .skill-card:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-/*Scroll To Top 
-#return-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.7);
-  width: 50px;
-  height: 50px;
-  display: block;
-  text-decoration: none;
-  -webkit-border-radius: 35px;
-  -moz-border-radius: 35px;
-  border-radius: 35px;
-  display: none;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-#return-to-top i {
-  color: #fff;
-  margin: 0;
-  position: relative;
-  left: 16px;
-  top: 13px;
-  font-size: 19px;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-#return-to-top:hover {
-  background: rgba(0, 0, 0, 0.9);
-}
-
-#return-to-top:hover i {
-  color: #fff;
-  top: 5px;
-}
-
-
-
-
 /*Work-Projects*/
 .Work {
   margin: 2rem 0;
   position: center;
   background: #011627;
+  margin-bottom: 2rem;
 }
 
 .projects {
   display: grid;
   grid-gap: 0.7rem;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
 }
 
 .Work h1 {
@@ -312,15 +282,24 @@ ul {
   transition: 0.5s ease-in-out;
 }
 
+.project-tile {
+  margin: 2rem;
+}
+
 /*Contact*/
+.Contact {
+  margin-top: 2rem;
+  background-color: var(--secondary-color);
+}
+
 .Contact h1 {
   font-size: 3rem;
-  color: white;
+  color: var(--primary-color);
 }
 
 .Contact h2 {
   margin: 1.5rem 0;
-  color: white;
+  color: var(--primary-color);
 }
 
 .boxes {
@@ -338,7 +317,7 @@ ul {
   border: 3px #fff solid;
   padding: 1.5rem 2.5rem;
   margin-top: 3rem;
-  color: white;
+  color: var(--primary-color);
   transition: color 0.5s ease-in-out;
   transition: 0.5s ease-out;
   background: #011627;
@@ -351,7 +330,7 @@ ul {
 }
 
 .boxes div:hover span {
-  color: #000;
+  color: var(--secondary-color);
 }
 
 .boxes a {
@@ -368,71 +347,156 @@ ul {
   margin-top: -50px;
 }
 
+
 /*Media Queries*/
 .navbar .icon {
   display: none;
 }
 
-@media screen and (max-width: 600px) {
-  .About .container div:first-child {
-    order: 2;
+@media screen and (max-width: 700px) {
+  h1 {
+    text-align: center;
   }
 
-  .About .container div:nth-child() {
-    order: -1;
+  h2 {
+    text-align: center;
   }
 
-  .navbar a.icon {
-    float: right;
-    display: block;
+  .Home .icons {
+    margin: auto;
+    margin-top: 1rem;
   }
 
-  .About img {
-    width: 80%;
+
+
+  p {
+    font-size: 2rem;
+    text-align: center;
+    line-height: 40px;
+  }
+
+  .navbar {
+    position: fixed;
+    background-color: #b2b2b2;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  .navbar .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .navbar .nav {
+    justify-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+
+  .navbar .nav a {
+    padding: 0 0.5rem;
+    color: var(--primary-color);
+  }
+
+  .nav a.active {
+    background-color: green;
+    color: var(--secondary-color);
+  }
+
+  .About .container .body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
     margin: auto;
   }
 
-  .About h1 {
+  .About .container .body p {
+    margin-bottom: 2rem;
+  }
+
+  .About img {
+    display: none;
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
+
+  .projects .item {
+    margin-bottom: 2rem;
+  }
+
+
+
+  .project-tile {
+    margin-bottom: 2rem;
+  }
+
+  .Contact h1 {
     font-size: 3rem;
+    color: var(--primary-color);
+  }
+
+  .Contact h2 {
+    margin: 1rem 0;
+    color: var(--primary-color);
+  }
+
+  .boxes div {
+    font-size: 1rem;
   }
 }
 
-@media screen and (max-width: 700px) {
-  .navbar.responsive {
-    position: relative;
+@media screen and (max-width: 1000) {
+  .projects {
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(3, 1fr);
   }
+}
 
-  .navbar.navbar.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
 
-  .navbar.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 
-  .About .container div:first-child {
-    order: 2;
-  }
+/* {
+  background-color: rgba(255, 0, 0, 0.2);
+}
 
-  .About .container div:nth-child() {
-    order: -1;
-  }
+** {
+  background-color: rgba(0, 255, 0, 0.2);
+}
 
-  .navbar a.icon {
-    float: right;
-    display: block;
-  }
+*** {
+  background-color: rgba(0, 0, 255, 0.2);
+}
 
-  .About img {
-    width: 80%;
-    margin: auto;
-  }
+**** {
+  background-color: rgba(255, 0, 255, 0.2);
+}
 
-  .About h1 {
-    font-size: 3rem;
-  }
+***** {
+  background-color: rgba(0, 255, 255, 0.2);
+}
+
+****** {
+  background-color: rgba(255, 255, 0, 0.2);
+}
+
+******* {
+  background-color: rgba(255, 0, 0, 0.2);
+}
+
+** * * * * * * {
+  background-color: rgba(0, 255, 0, 0.2);
+}
+
+** * * * * * * * {
+  background-color: rgba(0, 0, 255, 0.2);
 }
