--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   margin: 0;
   padding: 0;
 }
+
 html {
   scroll-behavior: smooth;
 }
@@ -186,10 +187,10 @@ ul {
   display: inline-block;
   background: var(--primary-color);
   color: #fff;
-  padding: 0.8rem 1.5rem;
+  padding: 1px 0.5rem;
   border: none;
   cursor: pointer;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
 }
 
 #myBtn:hover {
@@ -202,7 +203,7 @@ ul {
 
 /*skill card*/
 
-.skill {
+.skill .skills {
   background-color: #f2f2f2;
   display: flex;
   flex-direction: row;
@@ -212,14 +213,7 @@ ul {
   justify-content: center;
 }
 
-.skill h1 {
-  font-size: 3rem;
-  color: var(--primary-color);
-}
-
 .skill-card {
-  background: #011627;
-  color: #f2f2f2;
   margin: 2rem;
   border-radius: 10px;
   margin-bottom: 2rem;
@@ -350,6 +344,7 @@ ul {
 .navbar .icon {
   display: none;
 }
+
 /*Media Queries*/
 
 @media screen and (max-width: 700px) {
@@ -367,7 +362,7 @@ ul {
   }
 
   p {
-    font-size: 2rem;
+    font-size: 1rem;
     text-align: center;
     line-height: 40px;
   }
