--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 /*basic styling*/
 :root {
-  --primary-color: #333;
-  --secondary-color: #ffff;
-  --menu-color: #333;
+  --primary-color: #fff;
+  --secondary-color:#ff9f1c;
   --background-color: #011627;
-  --span-color: #ff9f1c;
 }
 
 * {
@@ -17,17 +15,14 @@ html {
   scroll-behavior: smooth;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   font-family: "Cantamaran", sans-serif;
   line-height: 1.6;
-  color: #333;
+  color: var(--primary-color);
   font-size: 1rem;
   background: #011627;
 }
+
 
 h1,
 h2,
@@ -36,64 +31,24 @@ h6 {
   line-height: 1.3;
 }
 
-/*Styling the menu*/
-
-a {
-  color: var(--menu-color);
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
-}
-
-.container {
-  max-width: 1100px;
-  max-height: 1100px;
-  margin: auto;
-  overflow: hidden;
-  padding: 0 2rem;
-}
-
-.navbar {
-  position: fixed;
-  background-color: white;
-  top: 0;
-  width: 100%;
-}
-
-.navbar .container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.navbar .nav {
-  justify-self: flex-end;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.navbar .nav a {
-  padding: 0 1rem;
-  color: #333;
-}
-
-.navbar .nav a.active {
-  background-color: #ff9f1c;
-  color: white;
-}
-
-.navbar .nav a:hover {
-  color: #ff9f1c;
-}
-
 /*Home Section */
 .Home {
   margin: 2rem 0;
   position: center;
-  background: #011627;
+  background: var(--background-color);
+  background-image: url(img/developer-background-607.jpg);
+  background-size: cover;
 }
+body::after{
+  content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: rgba(1, 22, 39, 0.1);
+  }
 
 .Home .container {
   height: 700px;
@@ -102,7 +57,7 @@ ul {
 }
 
 .Home .Home-inner {
-  color: white;
+  color: var(--primary-color);
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -123,7 +78,7 @@ ul {
 }
 
 .text-secondary {
-  color: #ff9f1c;
+  color: var(--secondary-color);
 }
 
 .Home .icons {
@@ -136,7 +91,7 @@ ul {
 }
 
 .Home .icons a:hover {
-  color: #ff9f1c;
+  color: var(--secondary-color);
   padding: 0.5rem 1.5rem;
   transition: color 0.5s ease-out;
   transition: 0.5s ease-out;
@@ -151,7 +106,7 @@ ul {
 .About .container .heading h1 {
   display: block;
   font-size: 3rem;
-  color: white;
+  color: whitep;
   justify-content: center;
   align-self: center;
 }
@@ -183,16 +138,6 @@ ul {
   height: 250px;
 }
 
-#myBtn {
-  display: inline-block;
-  background: var(--primary-color);
-  color: #fff;
-  padding: 1px 0.5rem;
-  border: none;
-  cursor: pointer;
-  font-size: 0.9rem;
-}
-
 #myBtn:hover {
   background: #ff9f1c;
 }
@@ -204,7 +149,6 @@ ul {
 /*skill card*/
 
 .skill .skills {
-  background-color: #f2f2f2;
   display: flex;
   flex-direction: row;
   padding: 3rem;
@@ -241,6 +185,7 @@ ul {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto;
 }
+
 a .Work h1 {
   font-size: 3rem;
   color: var(--secondary-color);
@@ -282,6 +227,7 @@ a .Work h1 {
 /*Contact*/
 .Contact {
   margin-top: 2rem;
+  margin-bottom: 20px;
   background-color: var(--secondary-color);
 }
 
@@ -366,36 +312,6 @@ a .Work h1 {
     line-height: 40px;
   }
 
-  .navbar {
-    position: fixed;
-    background-color: #b2b2b2;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
-
-  .navbar .container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .navbar .nav {
-    justify-self: flex-end;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .navbar .nav a {
-    padding: 0 0.5rem;
-    color: var(--primary-color);
-  }
-
-  .nav a.active {
-    background-color: green;
-    color: var(--secondary-color);
-  }
-
   .About .container .body {
     display: flex;
     flex-direction: column;
@@ -425,12 +341,46 @@ a .Work h1 {
   .boxes div {
     font-size: 1rem;
   }
-}
-
-@media screen and (max-width: 1000) {
   .projects {
     display: grid;
     grid-gap: 0.7rem;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: auto;
   }
+}
+
+/* {
+  background-color: rgba(255, 0, 0, 0.2);
+}
+
+* {
+  background-color: rgba(0, 255, 0, 0.2);
+}
+
+*** {
+  background-color: rgba(0, 0, 255, 0.2);
+}
+
+**** {
+  background-color: rgba(255, 0, 255, 0.2);
+}
+
+***** {
+  background-color: rgba(0, 255, 255, 0.2);
+}
+
+****** {
+  background-color: rgba(255, 255, 0, 0.2);
+}
+
+******* {
+  background-color: rgba(255, 0, 0, 0.2);
+}
+
+** * * * * * * {
+  background-color: rgba(0, 255, 0, 0.2);
+}
+
+** * * * * * * * {
+  background-color: rgba(0, 0, 255, 0.2);
 }
