--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*basic styling*/
 :root {
   --primary-color: #fff;
-  --secondary-color:#ff9f1c;
+  --secondary-color: #ff9f1c;
   --background-color: #011627;
 }
 
@@ -36,19 +36,20 @@ h6 {
   margin: 2rem 0;
   position: center;
   background: var(--background-color);
-  background-image: url(img/developer-background-607.jpg);
+  background-image: url(/img/developer-background-607.jpg) no-repeat;
   background-size: cover;
 }
-body::after{
+
+body::after {
   content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background: rgba(1, 22, 39, 0.1);
-  }
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: rgba(1, 22, 39, 0.1);
+}
 
 .Home .container {
   height: 700px;
@@ -228,7 +229,7 @@ a .Work h1 {
 .Contact {
   margin-top: 2rem;
   margin-bottom: 20px;
-  background-color: var(--secondary-color);
+  background-color: var(--background-color);
 }
 
 .Contact h1 {
@@ -281,7 +282,7 @@ a .Work h1 {
   text-align: center;
   padding: 1rem;
   background: var(--primary-color);
-  color: white;
+  color: #fff;
   height: 60px;
   margin-top: -50px;
 }
@@ -341,6 +342,7 @@ a .Work h1 {
   .boxes div {
     font-size: 1rem;
   }
+
   .projects {
     display: grid;
     grid-gap: 0.7rem;
